# LeapMusic

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFreeGLUT.cmake  FindPortAudio.cmake
include/: CMakeLists.txt
src/: AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  Consumer.cpp  Consumer.hpp  ContinousSine.cpp  ContinousSine.hpp  Entry.cpp  Entry.h  Entry.hpp  EventHandler.cpp  EventHandler.h  LeapListener.cpp  LeapListener.h  LeapListener.hpp  Listener.cpp  Listener.h  Main.cpp  Matte.cpp  Matte.h  Matte.hpp  Menu.cpp  Menu.h  Menu.hpp  Mixer.cpp  Mixer.hpp  PortAudioRecPlay.cpp  Sample.cpp  Sine.cpp  Sine.hpp  Sound.cpp  Sound.h  Sound.hpp  Tutorial.cpp  Tutorial.hpp
src/graphics/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  LoadObject.c
src/graphics/shaders/: hand.frag  hand.vert  main.frag  main.vert
src/graphics/textures/: closedHand.tga  closedHand2.tga  closedHandForeFinger.tga  closedHandForeFinger2.tga  flipHand.tga  flipHand2.tga
textures/: clef_long.tga  clef_short.tga
