add_executable (LeapMusic Main.cpp LeapListener.cpp Menu.cpp)
add_library (Matte Matte.cpp Matte.h)
target_link_libraries (LeapMusic Matte)

if(APPLE)
	target_link_libraries (LeapMusic ${Leap_lib}/libLeap.dylib)
elseif(WIN32)
	if (${arch} STREQUAL "i386")
		target_link_libraries (LeapMusic ${Leap_lib}/x86/libLeap.dll)
	else()
		target_link_libraries (LeapMusic ${Leap_lib}/x64/libLeap.dll)
	endif()
else()
	if (${arch} STREQUAL "i386")
		target_link_libraries (LeapMusic ${Leap_lib}/x86/libLeap.so)
	else()
		target_link_libraries (LeapMusic ${Leap_lib}/x64/libLeap.so)
	endif()
endif()
