add_executable (LeapMusic Main.cpp LeapListener.cpp Menu.cpp Entry.cpp)
add_library (Sound Sound.cpp Sine.cpp)
add_library (Matte Matte.cpp)
target_link_libraries (Sound ${PORTAUDIO_LIBRARIES})
target_link_libraries (LeapMusic Matte Sound)

# The following ugly piece of code exists because I couldn't get FindLeap.cmake to work.
if(APPLE)
	target_link_libraries (LeapMusic ${Leap_lib}/libLeap.dylib)
	set (DYLD_LIBRARY_PATH ${DYLD_LIBRARY_PATH}:${Leap_lib}/libLeap.dylib)
elseif(WIN32)
	if (${arch} STREQUAL "i386")
		target_link_libraries (LeapMusic ${Leap_lib}/x86/libLeap.dll)
	else()
		target_link_libraries (LeapMusic ${Leap_lib}/x64/libLeap.dll)
	endif()
else()
	if (${arch} STREQUAL "i386")
		target_link_libraries (LeapMusic ${Leap_lib}/x86/libLeap.so)
	else()
		target_link_libraries (LeapMusic ${Leap_lib}/x64/libLeap.so)
	endif()
endif()
